// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toThrow() error class did not throw at all 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error name: <green>\\"Err\\"</>

Received function did not throw an exception"
`;

exports[`.toThrow() error class threw, but class did not match 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error name: <green>\\"Err2\\"</>
Received error name: <red>\\"Error\\"</>

Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrow() error class threw, but should not have 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error name: <green>\\"Err\\"</>
Received error name: <red>\\"Error\\"</>

Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrow() invalid actual 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrow<dim>()</>

<bold>Matcher error</>: <red>received</> value must be a function

Received has type:  string
Received has value: <red>\\"a string\\"</>"
`;

exports[`.toThrow() invalid arguments 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrow<dim>(</><green>expected</><dim>)</>

<bold>Matcher error</>: <green>expected</> value must be a string or regular expression or class or error

Expected has type:  number
Expected has value: <green>111</>"
`;

exports[`.toThrow() promise/async throws if Error-like object is returned did not throw at all 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mrejects[2m.[22mtoThrow[2m()[22m

Received function did not throw an exception]
`;

exports[`.toThrow() promise/async throws if Error-like object is returned threw, but class did not match 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mrejects[2m.[22mtoThrow[2m([22m[32mexpected[39m[2m)[22m

Expected error name: [32m"Err2"[39m
Received error name: [31m"Error"[39m

Received error message: [31m"async apple"[39m

      [2mat jestExpect ([22mpackages/expect/src/__tests__/toThrowMatchers-test.js[2m:24:74)[22m]
`;

exports[`.toThrow() promise/async throws if Error-like object is returned threw, but should not have 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mrejects[2m.[22mnot[2m.[22mtoThrow[2m()[22m

Received error name:    [31m"Error"[39m
Received error message: [31m"async apple"[39m

      [2mat jestExpect ([22mpackages/expect/src/__tests__/toThrowMatchers-test.js[2m:24:74)[22m]
`;

exports[`.toThrow() regexp did not throw at all 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>/apple/</>

Received function did not throw an exception"
`;

exports[`.toThrow() regexp threw, but message did not match 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>/banana/</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrow() regexp threw, but should not have 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>/apple/</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrow() strings did not throw at all 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>\\"apple\\"</>

Received function did not throw an exception"
`;

exports[`.toThrow() strings threw, but message did not match 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>\\"banana\\"</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrow() strings threw, but should not have 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrow<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>\\"apple\\"</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrowError() error class did not throw at all 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error name: <green>\\"Err\\"</>

Received function did not throw an exception"
`;

exports[`.toThrowError() error class threw, but class did not match 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error name: <green>\\"Err2\\"</>
Received error name: <red>\\"Error\\"</>

Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrowError() error class threw, but should not have 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error name: <green>\\"Err\\"</>
Received error name: <red>\\"Error\\"</>

Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrowError() invalid actual 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrowError<dim>()</>

<bold>Matcher error</>: <red>received</> value must be a function

Received has type:  string
Received has value: <red>\\"a string\\"</>"
`;

exports[`.toThrowError() invalid arguments 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrowError<dim>(</><green>expected</><dim>)</>

<bold>Matcher error</>: <green>expected</> value must be a string or regular expression or class or error

Expected has type:  number
Expected has value: <green>111</>"
`;

exports[`.toThrowError() promise/async throws if Error-like object is returned did not throw at all 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mrejects[2m.[22mtoThrowError[2m()[22m

Received function did not throw an exception]
`;

exports[`.toThrowError() promise/async throws if Error-like object is returned threw, but class did not match 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mrejects[2m.[22mtoThrowError[2m([22m[32mexpected[39m[2m)[22m

Expected error name: [32m"Err2"[39m
Received error name: [31m"Error"[39m

Received error message: [31m"async apple"[39m

      [2mat jestExpect ([22mpackages/expect/src/__tests__/toThrowMatchers-test.js[2m:24:74)[22m]
`;

exports[`.toThrowError() promise/async throws if Error-like object is returned threw, but should not have 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mrejects[2m.[22mnot[2m.[22mtoThrowError[2m()[22m

Received error name:    [31m"Error"[39m
Received error message: [31m"async apple"[39m

      [2mat jestExpect ([22mpackages/expect/src/__tests__/toThrowMatchers-test.js[2m:24:74)[22m]
`;

exports[`.toThrowError() regexp did not throw at all 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>/apple/</>

Received function did not throw an exception"
`;

exports[`.toThrowError() regexp threw, but message did not match 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>/banana/</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrowError() regexp threw, but should not have 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>/apple/</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrowError() strings did not throw at all 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>\\"apple\\"</>

Received function did not throw an exception"
`;

exports[`.toThrowError() strings threw, but message did not match 1`] = `
"<dim>expect(</><red>received</><dim>).</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>\\"banana\\"</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;

exports[`.toThrowError() strings threw, but should not have 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toThrowError<dim>(</><green>expected</><dim>)</>

Expected error pattern: <green>\\"apple\\"</>
Received error message: <red>\\"apple\\"</>

      <dim>at jestExpect (</>packages/expect/src/__tests__/toThrowMatchers-test.js<dim>:24:74)</>"
`;
